--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -232,6 +232,7 @@ button, input {
     .seven { right: 46.95%; top: 32.7%; width: 6%; }
     .eight { right: 40.3%; top: 32.7%; width: 6%; }
     .nine { right: 33.9%; top: 32.7%; width: 6%;  }
+    .ten { height: 16.3%; }
 
 }
 
