--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -233,7 +233,7 @@ button, input {
     .eight { right: 40.3%; top: 32.7%; width: 6%; }
     .nine { right: 33.9%; top: 32.7%; width: 6%;  }
     .ten { height: 16.3%; }
-    .fourteten { height: 16.3% !important; }
+    .fourteen { height: 16.3% !important; }
 
 }
 
