--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -161,7 +161,7 @@ button, input {
     border: 1px solid #c62b1c;
     width: 50%;
     overflow: scroll;
-    height: 50%;
+    height: auto;
     /* max-height: calc(100vh - 80px); */
     /* overflow-y: auto;   */
 }
@@ -175,8 +175,8 @@ button, input {
 
 @media screen and (max-width: 500px) {
     .chat-modal-content {
-        height: 70%;
-        width: 95%;
+        height: auto;
+        width: auto;
     }
 }
 
@@ -201,7 +201,8 @@ button, input {
 .ten.active { background-image: url('../images/doors/ten.png'); background-size: contain; background-position: center center; }
 .twelve.active { background-image: url('../images/doors/twelve.png'); background-size: contain; background-position: center center;  }
 .thirteen.active { background-image: url('../images/doors/thirteen.png'); background-size: contain; background-position: center center; }
-.fourteen.active:hover { background-image: url('../images/doors/fourteen.png'); }
+.fourteen.active { background-image: url('../images/doors/fourteen.png'); background-size: contain; background-position: center center; }
+.fifteen.active:hover { background-image: url('../images/doors/thirteen.png'); }
 
 
 /* ROW ONE DOORS */
@@ -218,6 +219,7 @@ button, input {
 .twelve { right: 46.9%; top: 41.2%; width: 6.15%; height: 7.8%; }
 .thirteen { right: 40.3%; top: 41.2%; width: 6.15%; height: 7.8%; }
 .fourteen { right: 33.8%; top: 41.3%; width: 6%; height: 16.3%; }
+.fifteen { right: 53.6%; top: 49.8%; width: 6.1%; height: 7.7%;  }
 
 @media screen and (min-width: 768px) and (max-width: 1024px) {
 
@@ -264,6 +266,7 @@ button, input {
     .twelve { right: 40%; top: 41.2%; height: 7.9%; width: 17.4%; }
     .thirteen { right: 22.2%; top: 41.2%; height: 7.9%; width: 16.6%; }
     .fourteen { right: 3.7%; top: 41.5%; height: 16.3%; width: 16.8%; }
+    .fifteen { right: 58.6%; top: 49.8%;  width: 16.8%; }
 }
 
 #landing-modal {
